docs/stylesheets/extra.css
:root {
    --crust: #11111b;
    --mantle: #181825;
    --base: #1e1e2e;
    --blue: #89b4fa;
    --peach: #fab387;
    --sapphire: #74c7ec;
    --green: #a6e3a1;
    --mauve: #cba6f7;
    --text: #cdd6f4;
    --subtext1: #bac2de;
    --overlay2: #9399b2;

    /* Read the docs injected version container */
    --readthedocs-flyout-background-color: var(--crust) !important;
    --readthedocs-flyout-current-version-color: var(--green) !important;
    --readthedocs-flyout-item-link-color: var(--text) !important;
    --readthedocs-flyout-section-heading-color: var(--subtext1) !important;
    --readthedocs-flyout-link-color: var(--blue) !important;
    --readthedocs-flyout-divider-color: var(--overlay2) !important;
}

[data-md-color-scheme="slate"] {
    --md-primary-fg-color: var(--blue);
    --md-default-bg-color: var(--base);
    --mx-topbar-bg: var(--mantle);
    --mx-topbar-fg: var(--text);
    --doc-symbol-attribute-fg-color: var(--peach);
    --doc-symbol-attribute-bg-color: color-mix(
        in oklab,
        var(--peach) 20%,
        var(--base)
    );
    --doc-symbol-class-fg-color: var(--sapphire);
    --doc-symbol-class-bg-color: color-mix(
        in oklab,
        var(--sapphire) 20%,
        var(--base)
    );
    --doc-symbol-module-fg-color: var(--green);
    --doc-symbol-module-bg-color: color-mix(
        in oklab,
        var(--green) 20%,
        var(--base)
    );
    --doc-symbol-method-fg-color: var(--mauve);
    --doc-symbol-method-bg-color: color-mix(
        in oklab,
        var(--mauve) 20%,
        var(--base)
    );
}

html {
    font-size: 28px;
}

body {
    color: var(--text);
}

.doc-symbol-parameter::after,
.doc-symbol-type_parameter::after {
    content: "P" !important;
}

.doc-symbol-attribute::after {
    content: "A" !important;
}

.doc-symbol-function::after {
    content: "F" !important;
}

.doc-symbol-method::after,
.doc-symbol-module::after {
    content: "M" !important;
}

.doc-symbol-class::after {
    content: "C" !important;
}

.doc-symbol-type_alias::after {
    content: "T" !important;
}

